# dit

./: .gitignore  Cargo.toml  README.md  TODO.md  test.sh
atlas_gen/: Cargo.toml
atlas_gen/src/: allocator.rs  atlas.rs  cont_comb.rs  contour_combiner.rs  distances.rs  edge_cache.rs  edge_coloring.rs  edge_select.rs  edge_selectors.rs  lib.rs  (+7 more)
dit/: Cargo.toml  perf.data
dit/assets/shaders/: instance.frag  instance.vert  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
dit/src/: app.rs  err.rs  fontfile.rs  glyph.rs  lib.rs  main.rs  main.rs~  parse.rs  parser.rs  read_utils.rs  temp.rs  unicode_ranges.rs
dit/src/ansii/: NOTES.md  details.rs  mod.rs  tests.rs  utf_decoder.rs
dit/src/atlas/: mod.rs
dit/src/config/: mod.rs  parse.rs  resolve.rs  state.rs
dit/src/dsa/: cache.rs  mod.rs  search.rs
dit/src/font_manager/: mod.rs  search.rs
dit/src/math/: math.rs  mod.rs  vec.rs
dit/src/parse/: error.rs  glyf.rs  maxp.rs  mod.rs  utils.rs
dit/src/parse/table/: glyf.rs  head.rs  mod.rs
dit/src/parse/table/cmap/: format12.rs  format4.rs  mod.rs
dit/src/render/: debug.rs  mod.rs  vkcore.rs
dit/src/render/shaders/: frag.glsl  vert.glsl
dit/src/renderer/: buffer.rs  command.rs  context.rs  debug.rs  device.rs  memory.rs  mod.rs  notes.md  pipeline.rs  queue.rs  renderpass.rs  resources.rs  shader.rs  swapchain.rs  texture.rs  utils.rs  vkapp.rs  vkcore.rs
dit/src/renderer/shaders/: shader.frag  shader.vert
dit/src/screen/: cells.rs  mod.rs  rewrite.rs  ring_buf.rs
dit/src/shell/: mod.rs
dit/src/text/: mod.rs
font_parser/: Cargo.toml
(+22 files in other folders)
