[package]
name = "dit"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0" 
ash-window = "0.13.0"
bitflags = "2.10.0"
image = "0.25.9"
rand = "0.9.2"
winit = "0.30.12"
font_parser = { path = "../font_parser" }
atlas_gen = { path = "../atlas_gen" }
smallvec = "1.15.1"
nix = { version="0.31.1", features=["term", "process", "fs", "ioctl", "poll"] }
crossbeam = "0.8.4"
